Fixed CSS issues adding flex no wrap to the header. Also changed the media queries resolution cutoff

--- a/game.css
+++ b/game.css
@@ -154,16 +154,20 @@ section {
 }
 
 
-@media (min-width: 830px),(min-height: 1020px) {
+@media (min-width: 850px),(min-height: 850px) {
 
   header {
     align-self: center;
     height: 50%;
   }
+  #start{
+
+    font-size: 18px;
+  }
   #button{
-    font-size: 20px;
+
     height: 40px;
-    padding: 5px;
+    padding: 2px;
   }
   img{
     height: 250px;
@@ -198,7 +202,7 @@ section {
   header{
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: center;
     height: 50%;
   }
